--- a/bookings.html
+++ b/bookings.html
@@ -12,12 +12,12 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/carousel/">
 
     <!-- Bootstrap core CSS -->
-<link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap-grid.css">
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap-reboot.css">
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/bootstrap/4.3/dist/css/bootstrap-grid.css">
+    <link rel="stylesheet" href="assets/bootstrap/4.3/dist/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="assets/bootstrap/4.3/dist/css/bootstrap-reboot.css">
+    <link rel="stylesheet" href="assets/bootstrap/4.3/dist/css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="assets/bootstrap/4.3/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/bootstrap/4.3/dist/css/bootstrap.min.css">
     <link href="/assets/bootstrap/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
@@ -74,39 +74,39 @@
             </div>
         </nav>
     </header>
-<div>
-<div class ="contact-text">
-    <h1 class="contact-heading">Contact us for availability!</h1>
-    <p>We play for all events and would love to be a part of yours!<br> Please contact us using the below form for our current availability.</p>
+    <div>
+        <div class="contact-text">
+            <h1 class="contact-heading">Contact us for availability!</h1>
+            <p>We play for all events and would love to be a part of yours!<br> Please contact us using the below form for our current availability.</p>
+        </div>
+        <form>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputFirstName4"><b>First Name</b></label>
+                    <input type="text" class="form-control" id="inputFirstName4" placeholder="Jane">
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputLastName4"><b>Last Name</b></label>
+                    <input type="text" class="form-control" id="inputLastName4" placeholder="Doe">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputEmail4"><b>Email</b></label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="janedoe@email.com">
+            </div>
+            <div class="form-group">
+                <label for="inputPhone"><b>Phone</b></label>
+                <input type="tel" class="form-control" id="inputPhone" placeholder="0891234567">
+            </div>
+            <div class="form-group">
+                <label for="inputMessage"><b>Message</b></label>
+                <input type="text" class="form-control" id="inputMessage" placeholder="Please include preferred date">
+            </div>
+            <div class="text-center contact-button">
+                <button type="submit" class="btn-lg btn-secondary">Submit</button></div>
+        </form>
+
     </div>
-    <form>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputFirstName4"><b>First Name</b></label>
-      <input type="text" class="form-control" id="inputFirstName4" placeholder="Jane">
-    </div>
-    <div class="form-group col-md-6">
-      <label for="inputLastName4"><b>Last Name</b></label>
-      <input type="text" class="form-control" id="inputLastName4" placeholder="Doe">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="inputEmail4"><b>Email</b></label>
-    <input type="email" class="form-control" id="inputEmail4" placeholder="janedoe@email.com">
-  </div>
-  <div class="form-group">
-    <label for="inputPhone"><b>Phone</b></label>
-    <input type="tel" class="form-control" id="inputPhone" placeholder="0891234567">
-  </div>
-  <div class="form-group">
-    <label for="inputMessage"><b>Message</b></label>
-    <input type="text" class="form-control" id="inputMessage" placeholder="Please include preferred date">
-  </div>
-  <div class="text-center contact-button">
-  <button type="submit" class="btn-lg btn-secondary">Submit</button></div>
-</form>
-    
-</div>
 
     <footer class="container">
         <p class="float-right"><a href="#">Back to top</a></p>
